--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 ##############################
 text_skin: default # "default" (default), "dark", "forest", "ocean", "chocolate", "orange"
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
-url     : "blog.lao-yuan.com" # the base hostname & protocol for your site e.g. https://www.someone.com
+url     : "https://blog.lao-yuan.com" # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : "" # does not include hostname
 title   : Lao-Yuan's Blog
 description: > # this means to ignore newlines until "Language & timezone"
